# libbbmutils

./: .gitignore  .pandoc.yml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  bbmutils.h  bbmutils.sln  makefile  math_lib.VC.db  math_lib.h  math_lib.sln  pandoc.yml
.github/workflows/: ccpp.yml
doc/: Doxyfile  doxy_header.tex
libbbmutils.vcxproj/: libbbmutils.vcxproj  libbbmutils.vcxproj.filters
math_lib/: math_lib.h
scripts/: test_all.sh
src/: bbmutils.c  bbmutils.h  math_lib.c  math_lib.h  matrix_lib.c  test.c  test_2d.c  test_3d.c  test_6d.c  test_all.sh  test_es.c
test/: test_2d.c  test_3d.c  test_6d.c  test_es.c
test_2d.vcxproj/: test_2d.vcxproj  test_2d.vcxproj.filters
test_3d.vcxproj/: test_3d.vcxproj  test_3d.vcxproj.filters
test_6d.vcxproj/: test_6d.vcxproj  test_6d.vcxproj.filters
test_es.vcxproj/: test_es.vcxproj  test_es.vcxproj.filters
vs/: test.vcxproj  test.vcxproj.filters  test_2d.vcxproj  test_2d.vcxproj.filters  test_3d.vcxproj  test_3d.vcxproj.filters  test_6d.vcxproj  test_6d.vcxproj.filters  test_es.vcxproj  test_es.vcxproj.filters
